package com.company;

public class Main {

    public static void main(String[] args) {
        SignIn signIn = new SignIn();
        signIn.sign();

    }
}
