package com.company;

import java.util.ArrayList;
import java.util.Scanner;

public class Search {

    public Film findFilmByName(){
        Scanner s = new Scanner(System.in);
        String str = s.nextLine();

    }

    public ArrayList<Film> getAllFilmsofGenre(){

    }
}
